<resources>
    <string name="app_name" translatable="false">Dogedex</string>
    <string name="description_arrow_back">Navega a la pantalla anterior</string>

    <!--error example-->
    <string name="hint_example" translatable="false">hint_example</string>
    <string name="label_example" translatable="false">label_example</string>
    <string name="error_empty_example" translatable="false">Error example</string>
    <string name="error_length_example" translatable="false">Error length example</string>


    <!-- errors exceptions -->
    <string name="error_credentials_sign_up">Verifique sus credenciales</string>
    <string name="error_user_no_register">El usuario no está registrado</string>
    <string name="error_unknown">Error desconocido</string>
    <string name="error_no_network_avariable">Verifique su conexión a internet</string>
    <string name="error_server_connect">El servidor no responde</string>
    <string name="error_sign_up">Hubo un error al crear la cuenta, reintente</string>
    <string name="error_sign_in">Error al ingresar a la cuenta, reintente</string>
    <string name="error_user_already_registered">Este usuario ya está registrado</string>
    <string name="internal_server_error">Hubo un error en el servidor, reintente más tarde</string>

    <!-- Camera screen -->

    <string name="description_button_collections">Ir a la colección de perros</string>
    <string name="description_button_camera">Tomar foto del perro enfocado</string>
    <string name="description_button_settings">Ir a la pantalla de configuración</string>
    <string name="message_permission_camera_is_necesary">Se requiere el permiso de la cámara</string>
    <string name="message_button_lauch_camera_permission">Conceder permiso</string>

    <!-- dog details screen -->

    <string name="title_details_new_dog">Nuevo perro</string>
    <string name="title_details_saved_dog">Información del perro</string>
    <string name="index_dog" translatable="false">#%d</string>
    <string name="description_img_details_dog">Perro actual %s con índice %d</string>
    <string name="title_lifeExpectancy">Esperanza de vida: %s</string>
    <string name="title_temperament">Temperamento: %s</string>
    <string name="text_save_dog">Guardar perro</string>
    <string name="description_button_save_dog">Guardar perro actual</string>
    <string name="title_gender_female">Femenino</string>
    <string name="title_gender_male">Masculino</string>
    <string name="title_dog_group">Grupo</string>
    <string name="title_weight_dog">Peso</string>
    <string name="title_height_dog">Altura</string>

    <!-- list dog screen -->
    <string name="description_has_dog">Perro guardado con el índice %d con el nombre de %s</string>

    <!-- login screen -->
    <string name="label_email" translatable="false">Email</string>
    <string name="hint_email">Escribe tu email</string>
    <string name="error_empty_email">El email es necesario</string>
    <string name="error_length_email">El email no puede ser tan largo</string>
    <string name="label_password">Contraseña</string>
    <string name="hint_password">Escribe tu contraseña</string>
    <string name="error_empty_password">La contraseña es necesaria</string>
    <string name="error_length_password">La contraseña no puede ser tan larga</string>
    <string name="hint_repeat_password">Repite la contraseña</string>
    <string name="error_pass_repeat">Las contraseñas no coinciden</string>
    <string name="error_valid_email">El email no es válido</string>
    <string name="error_data_invalid">Verifique sus datos</string>
    <string name="text_button_sign_in">Iniciar sesión</string>
    <string name="text_has_not_account">¿No tienes cuenta?</string>
    <string name="text_button_go_sign_up">Regístrate</string>
    <string name="title_sign_up">Registro</string>
    <string name="text_button_next_sign_up">Continuar</string>
    <string name="title_settings">Configuración</string>
    <string name="text_button_sign_out">Cerrar sesión</string>
    <string name="description_show_password">Mostrar contraseña</string>
    <string name="description_hide_password">Ocultar contraseña</string>
    <string name="title_info_user">Información del usuario</string>
    <string name="title_id_user" translatable="false">Id: %s</string>
    <string name="title_email_user" translatable="false">Email: %s</string>
    <string name="title_token_user" translatable="false">Token: %s</string>
    <string name="dog_list">Perros</string>
    <string name="camera">Escaner</string>
    <string name="settings">Perfil</string>
    <string name="message_dog_saved">Perro guardado con éxito</string>
    <string name="title_dogs_caught">Número de perros escaneados %d</string>

    <!-- SignUP screen -->

</resources>